fix overflow on low res < 1024x768

--- a/trunk/src/com/googlecode/jchav/report/resources/style.css
+++ b/trunk/src/com/googlecode/jchav/report/resources/style.css
@@ -54,7 +54,7 @@ div.page
 {
 	float: left;
 	overflow:hidden;
-	width: 32%;
+	width: 31%;
 	border: 1px;
 	border-color: black;
 	border-style: solid;
